# ForbiddenIsland

./: CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  ForbiddenIslandUI.cpp  ForbiddenIslandUI.h  Game.cpp  Game.h  Hand.cpp  Hand.h  Player.cpp  Player.h  README.md  Solitaire.cpp  Solitaire.h  SolitaireUI.cpp  SolitaireUI.h  main.cpp  resources.qrc  ui_solitaire.h  ui_solitaire.ui
